# RayTracing

./: CMakeLists.txt  README.md
cmake/: Acceleration.cmake  Common.cmake  FrameBuffer.cmake  Geometry.cmake  Main.cmake  Math.cmake  Scene.cmake
source/: BRDF.hpp  Interaction.hpp  Light.hpp  Material.cpp  Material.hpp  Mesh.hpp  Primitive.hpp  RayTracer.cpp  RayTracer.hpp  main.cpp
source/acceleration/: Aggregate.hpp  BoundingVolumeHierarchy.hpp  SimpleContainer.hpp
source/common/: Threading.hpp  Types.hpp
source/framebuffer/: Image.hpp  ImagePNG.cpp  RenderTarget.cpp  RenderTarget.hpp
source/geometry/: Sphere.hpp  TriangleList.hpp
source/math/: Bounds.hpp  CommonMath.hpp  Float.cpp  Float.hpp  Matrix44.cpp  Matrix44.hpp  Ray.hpp
source/scene/: Camera.hpp  Scene.cpp  Scene.hpp
